增强对 Hypixel SkyBlock 连接的验证，更新 Hologram 采集逻辑。修正相关文档以反映这些更改。